--- a/action.yml
+++ b/action.yml
@@ -1,4 +1,4 @@
-name: 'Get Flutter Version'
+name: 'Get the Flutter Version Environment'
 description: 'Get the Flutter environment version from the pubspec file'
 outputs:
   version: 
